apps/linkerd/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: linkerd-host-localhost
  namespace: linkerd-viz
spec:
  headers:
    customRequestHeaders:
      Host: linkerd.local
      Origin: http://linkerd.local
